✨ feat: Füge JSON-Konfigurationsverwaltung Beispiel hinzu
- Neue config.py mit VSCodeEinstellungen-Klasse für Modul 5
- Demonstriert JSON-Parsing mit Kommentar-Unterstützung
- Zeigt Property-Pattern und strukturierte Konfigurationsverwaltung
- Umfassendes Beispiel mit 200+ Zeilen Code und Dokumentation
- Kleine Formatierungsverbesserung in VS Code Settings (trailing comma)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -116,6 +116,6 @@
 
     "terminal.integrated.defaultProfile.osx": "zsh",
     "terminal.integrated.defaultProfile.linux": "bash",
-    "terminal.integrated.defaultProfile.windows": "PowerShell",
+    "terminal.integrated.defaultProfile.windows": "PowerShell"
 
 }
